--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "pctco/apy",
+    "name": "pctco/pay",
     "type": "project",
     "keywords": ["Alipay"],
     "homepage": "https://pctco.com",
